--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 _site
 .sass-cache
-.jekyll-cache
 .jekyll-metadata
-vendor
+jekyll-help-center-theme-0.1.0.gem
+jekyll-help-center-theme.gemspec
+node_modules
