--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "Simple and responsive Jekyll theme for help center.",
   "publishConfig": {
-    "registry":"https://npm.pkg.github.com/"
+    "registry": "https://npm.pkg.github.com/"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "gulp"
+    "dev": "bundle exec jekyll serve --livereload --watch",
+    "commit": "node ./node_modules/cz-customizable/standalone.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/gustavoquinalha/jekyll-help-center-theme/issues"
   },
-  "homepage": "https://github.com/gustavoquinalha/jekyll-help-center-theme#readme"
+  "homepage": "https://github.com/gustavoquinalha/jekyll-help-center-theme#readme",
+  "devDependencies": {
+    "cz-customizable": "^6.2.0",
+    "gulp": "^4.0.2"
+  }
 }
