--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: "Help Center"
-email: gusquinalha@gmail.com
-description: "Simple and flexible Jekyll theme for help center."
+title: "Edu Center"
+username: "newCreator.org"
+email: contact@newcreator.org
+description: ""
 baseurl: ""
 url: ""
-twitter_username: "gustavoquinalha"
-github_username:  "gustavoquinalha"
+github_username:  "newcreator-org"
 color_theme:  "#000"
 color_text:  "#fff"
 language:  "ja"
