✨(front): change theme color

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: ""
 baseurl: ""
 url: ""
 github_username:  "newcreator-org"
-color_theme:  "#777"
+color_theme:  "#248EF0"
 color_text:  "#fff"
 language:  "ja"
 
