🔧(docs): 文面の変更

--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@
 title: "Edu Center"
 username: "newCreator.org"
 email: contact@newcreator.org
-description: ""
+description: "新型コロナウイルス(COVID-19)の流行および学校閉鎖に向けた、オンラインの教育サービス一覧サイト"
 baseurl: ""
-url: ""
+url: "https://edu-center.new.or.jp"
 github_username:  "newcreator-org"
 color_theme:  "#248EF0"
 color_text:  "#fff"
