--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ language:  "ja"
 # Build settings
 markdown: kramdown
 permalink: /:title/
-gems: [jekyll-paginate]
+plugins: [jekyll-paginate]
 paginate: 5
 
 # Plugins
